--- a/cw04-primes.ipynb
+++ b/cw04-primes.ipynb
@@ -7,6 +7,17 @@
     "collapsed": false
    },
    "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (primes.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/ext/anaconda3/lib/python3.5/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2910\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-af81fa36a10f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import primes\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/user/CS510/cw-04-max/primes.py\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print primes_sieve(2000)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
    ],
    "source": [
     "import primes"
@@ -18,44 +29,7 @@
     "collapsed": false
    },
    "source": [
-    "\n",
-    "The Sieve of Eratosthenes\n",
-    "This algorithm will take a value $n$ and will find all prime numbers less than $n$.\n",
-    "For example if you wanted to find all prime numbers less than $60$. You can use this algorithm and the result will be displayed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "primes.eratosthenes(60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
+    "The Sieve of Eratosthenes This algorithm will take a value $n$ and will find all prime numbers less than $n$. For example if you wanted to find all prime numbers less than $50$. You can use this algorithm and the result will be displayed."
    ]
   }
  ],
