--- a/cw04-primes.ipynb
+++ b/cw04-primes.ipynb
@@ -29,7 +29,7 @@
     "collapsed": false
    },
    "source": [
-    "The Sieve of Eratosthenes This algorithm will take a value $n$ and will find all prime numbers less than $n$. For example if you wanted to find all prime numbers less than $50$. You can use this algorithm and the result will be displayed."
+    "The algotithm Sieve of Eratosthenes will take a value of $n$ and will find all prime numbers less than $n$. Let's for example take $n=50$. This algorithm will give us the result of all prime numbers less than $50$."
    ]
   }
  ],
